# Depolymerization_kMC_BO

./: CMakeLists.txt  optimizer1.py
include/: DataStructureAndConstant.h  GlassEffectPropagationRate.h  InitiatorEfficiency.h  LengthDependentTerminationRate.h  MolecularWeightDistribution.h  MolecularWeightOutput.h  PolymerFeathure.h  ReadPolymer.h  depolymerization_explicit_sequence_record_number.h  efficient_explicit_sequence_record_number.h  my_rand.h  ode.h
src/: LengthDependentTerminationRate.cpp  depolymerization_explicit_sequence_record_number.cpp  efficient_explicit_sequence_record_number.cpp  globals.cpp  input0.txt  main.cpp  my_rand.cpp
